DEV-1775 Propagate Amber resources to output